# ironphysics

./: AI_PROMPT.md  Cargo.toml  ENGINE_GUIDE.md  README.md  check.json  check_tests.json  mkdocs.yml  package-lock.json  package.json  parsed_errors.txt  test_errors.txt
.github/workflows/: docs.yml
benches/: world_bench.rs
crates/collision/: Cargo.toml
crates/collision/src/: collider_handle.rs  filter.rs  handle.rs  lib.rs  pool.rs
crates/collision/src/broadphase/: bvh.rs  mod.rs
crates/collision/src/narrowphase/: analytic.rs  dispatch.rs  epa.rs  gjk.rs  manifold.rs  mod.rs  sat.rs
crates/collision/src/shape/: box_shape.rs  capsule.rs  circle.rs  convex_polygon.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: arena.rs  body.rs  config.rs  handle.rs  lib.rs  material.rs  world.rs
crates/dynamics/: Cargo.toml
crates/dynamics/src/: arena.rs  body.rs  body_view.rs  config.rs  constraint.rs  contact_solver.rs  island.rs  island_manager.rs  lib.rs  position_solver.rs  sleeping.rs  solver.rs
crates/dynamics/src/joint/: distance.rs  mod.rs  prismatic.rs  revolute.rs
crates/math/: Cargo.toml
crates/math/src/: aabb.rs  lib.rs  mat2.rs  scalar.rs  transform.rs  vec2.rs
docs/: architecture.md  collision.md  core.md  index.md  math.md  rigid_bodies.md  usage.md
src/: main.rs
src/math/: vec2.rs
src/physics/: rigid_body.rs
