[package]
name    = "physics_dynamics"
version = "0.1.0"
edition = "2021"

[dependencies]
physics_math      = { path = "../math" }
physics_collision = { path = "../collision" }
rayon = { workspace = true }


[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
num_cpus  = { workspace = true }